@@ -5,6 +5,7 @@ Akeeba Panopticon 1.3.3
 ~ PHP 8.5 compatibility
 # [LOW] Cannot save the "Accurate PHP-CLI path" setting.
 # [MEDIUM] Missing PHP expiration dates can cause a fatal error displaying a site.
+# [MEDIUM] Invalid dates (e.g. in backups) can cause a fatal error.
 # [HIGH] Manually enqueueing a WordPress plugin update in the UI does not schedule the plugins update task for the site.
 
 Akeeba Panopticon 1.3.2
